# program-synthesis

./: .gitignore  Grammar  gentraindata.py  main.py  sygusdata.py  sygusmap.py  sygusmodel.py  sygusparser.py  sygussolver.py  sygustree.py  testparser.py  translator.py
RL/: agent.py  env.py  main.py  tbcnn.py  translator.py
dev/: lengths
meta-learner/: ExprTree.py  checker.py  decoder.py  ggnn.py  main.py  parser.out  parsetab.py  rl.py  sygusparser.py  sygussolver.py  sygustree.py  testparser.py  translator.py
officialtest/: test.py  translator.py
open_tests/: test.sl
programs/1901111306_3.5/: gentraindata.py  main.py  mainscript.bash  realmain.py  sygusmodel.py  sygussolver.py  testparser.py
programs/1901111306_3.5/train/: ckpt-96.data-00000-of-00001
sygusparser/: .gitignore  CMakeLists.txt  Makefile  build.sh  main.cc  main.cpp  sygusparser.l  sygusparser.py  sygusparser.y  sygusparser_lexer.hh  sygustree.py  testparser.py  tree.h
testfile/: test.py
train/: ckpt-96.index
